--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/lewiszhao"
+  orcid            : # "http://orcid.org/lewiszhao"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
