--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yu Zhao"
 title_separator          : "-"
 name                     : &name "Yu Zhao"
-description              : &description "Engineer at Tencent, focus on computer vision and machine learning."
+description              : &description "EX-engineer at Tencent, focus on computer vision and machine learning. Now faculty at Chongqing University of Education."
 url                      : https://lewiszhao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lewiszhao.github.io"
