--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Yu Zhao"
   avatar           : "profile.png"
-  bio              : "Engineer at Tencent, focus on computer vision and machine learning."
+  bio              : "EX-engineer at Tencent, focus on computer vision and machine learning. Now faculty at Chongqing University of Education."
   location         :
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
